...
              child: Padding(
                padding: const EdgeInsets.symmetric(horizontal: Sizes.size40),
                child: Column(
                  children: [
                    Gaps.v80,
                    Text(
                      "Sign up for this App",
                      style: Theme.of(context).textTheme.headlineSmall,
                    ),
                    Gaps.v20,
                    Text(
                      S.of(context).signUpSubtitle(1),
                      style: TextStyle(
...
                    ),
                  ),
                  Gaps.h5,
                  GestureDetector(
                    onTap: () => _onLoginTap(context),
                    child: Text(
                      "Log in",
                      style: TextStyle(
                          color: Theme.of(context).primaryColor,
                          fontSize: Sizes.size14,
                          fontWeight: FontWeight.w600),
                    ),
                  ),
...
